# hidive

./: .bumpversion.cfg  .dockstore.yml  .gitignore  Cargo.toml  DEVELOP.rst  README.md  README.rst  VERSION  all.html  crates.js  eval-model.sh  fn.main.html  go.sh  go_revised.sh  help.html  index.html  search-index.js  settings.html  src-files.js  train.sh
.github/workflows/: cd.yml  ci_push.yml  git_pages.yml
assemble/: fn.start.html
cluster/: fn.start.html
coassemble/: index.html
docker/: CYP2D6_and_7_T2T_w_grch38_rep_and_spacer.fa  Dockerfile  HG01258.hap2.fa  Makefile  cyp2d6_plot.html  cyp2d6_plot_opts.json  divide_fasta_into_kmers.py  fmr1_params.json  get_final_star_alleles.py  get_star_allele_site_matches.py  hidive_clusters_hprc.fa  htt_params.json  kmer_align.sam  make_kmer_plot.py  make_viz.py
evaluation/: AsmEvaluation_smallfragments.wdl
fetch/: fn.start.html
hidive/: all.html  constant.DEFAULT_KMER_SIZE.html  constant.DEFAULT_WINDOW_SIZE.html  enum.Commands.html  fn.elapsed_time.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
hidive/assemble/: fn.calculate_edit_distance.html  fn.construct_anchor_table.html  fn.count_non_equal_elements.html  fn.euclidean_distance.html  fn.find_all_read.html  fn.find_targetseq_in_reads.html  fn.knn_impute.html  fn.manhattan_distance.html  fn.mip_optimization.html  fn.start.html  fn.write_fasta.html  index.html  sidebar-items.js
hidive/call/: fn.add_variant_records.html  fn.allele_counts.html  fn.allele_indices.html  fn.build_haplotypes.html  fn.create_read_allele_matrix.html  fn.initialize_vcf_header.html  fn.phase_variants.html  fn.prepare_matrix.html  fn.prepare_matrix_new.html  fn.start.html  fn.write_haplotypes.html  index.html  sidebar-items.js
hidive/cluster/: fn.start.html  index.html
hidive/coassemble/: fn.allele_counts.html  fn.allele_indices.html  fn.assemble_haplotype.html  fn.assign_reads_to_bubbles.html  fn.cluster_reads.html  fn.correct_reads.html  fn.orient_reads.html  (+7 more)
impute/: index.html
skydive/: all.html  index.html  macro.elog.html  sidebar-items.js
src/: Cargo.toml
src/hidive/: Cargo.toml  assemble.rs.html  build.rs.html  call.rs.html  cluster.rs.html  coassemble.rs.html  consensus.rs.html  correct.rs.html  eval_model.rs.html  fetch.rs.html  filter.rs.html  genotype.rs.html  impute.rs.html  main.rs.html  phase.rs.html  recruit.rs.html  rescue.rs.html  sift.rs.html  train.rs.html  trim.rs.html
src/hidive/src/: assembl_imputation.rs  assemble.rs  build.rs  call.rs  cluster.rs  coassemble.rs  consensus.rs  correct.rs  eval_model.rs  evaluation.rs  fetch.rs  filter.rs  genotype.rs  impute.rs  join.rs  main.rs  overlap.rs  phase.rs  poa_assemble.rs  prepare.rs  recruit.rs  rescue.rs  sift.rs  train.rs  trim.rs
src/hidive/tests/: fetch_tests.rs  rescue_tests.rs
src/pydive/: Cargo.toml
src/pydive/src/: AGG.py  HLA_imputation.ipynb  construct_graph.py  lib.rs
src/skydive/: Cargo.toml  agg.rs.html  edges.rs.html  env.rs.html  ldbg.rs.html  lib.rs.html  link.rs.html  mldbg.rs.html  parse.rs.html  record.rs.html  stage.rs.html  storage_gcs.rs.html  storage_local.rs.html  utils.rs.html  wmec.rs.html
src/skydive/proptest-regressions/: ldbg.txt
src/skydive/src/: agg.rs  dbg.rs  edges.rs  env.rs  ldbg.rs  lib.rs  link.rs  mldbg.rs  nn_model.rs  parse.rs  record.rs  stage.rs  storage_gcs.rs  storage_local.rs  utils.rs  wmec.rs
src/skydive/src/ldbg/: mod.rs  record.rs
src/skydive/src/utils/: mod.rs  stage.rs
src/skydive/tests/test_data/: .swp  .test.ctp.txt.swp  contigs.626a118783aea305ef7ad08eb037ea64.k_11.l_true.fa  contigs.626a118783aea305ef7ad08eb037ea64.k_13.l_true.fa  contigs.626a118783aea305ef7ad08eb037ea64.k_15.l_true.fa  contigs.626a118783aea305ef7ad08eb037ea64.k_17.l_true.fa  contigs.6751e81bf198e5ebfa83b1038a9c6a0b.k_11.l_true.fa  contigs.6751e81bf198e5ebfa83b1038a9c6a0b.k_13.l_true.fa  contigs.6751e81bf198e5ebfa83b1038a9c6a0b.k_15.l_true.fa  contigs.6751e81bf198e5ebfa83b1038a9c6a0b.k_17.l_true.fa  contigs.7b5296aa105a4bbcdf5934a4339f90a7.k_11.l_true.fa  contigs.7b5296aa105a4bbcdf5934a4339f90a7.k_13.l_true.fa  contigs.7b5296aa105a4bbcdf5934a4339f90a7.k_15.l_true.fa  contigs.7b5296aa105a4bbcdf5934a4339f90a7.k_17.l_true.fa  contigs.8c5a34ecbbbc35b22acf89472a9a2217.k_11.l_true.fa  contigs.8c5a34ecbbbc35b22acf89472a9a2217.k_13.l_true.fa  contigs.8c5a34ecbbbc35b22acf89472a9a2217.k_15.l_true.fa  contigs.8c5a34ecbbbc35b22acf89472a9a2217.k_17.l_true.fa  contigs.a49f1ece11fbf5e4d2e349145cd97236.k_11.l_true.fa  contigs.a49f1ece11fbf5e4d2e349145cd97236.k_13.l_true.fa  contigs.a49f1ece11fbf5e4d2e349145cd97236.k_15.l_true.fa  contigs.a49f1ece11fbf5e4d2e349145cd97236.k_17.l_true.fa  contigs.ac75cd1eff7d2bcfbdcd5ca70286360f.k_11.l_true.fa  contigs.ac75cd1eff7d2bcfbdcd5ca70286360f.k_13.l_true.fa  contigs.ac75cd1eff7d2bcfbdcd5ca70286360f.k_15.l_true.fa  contigs.ac75cd1eff7d2bcfbdcd5ca70286360f.k_17.l_true.fa  contigs.b33d0507edf83b76407cab380540482f.k_11.l_true.fa  contigs.b33d0507edf83b76407cab380540482f.k_13.l_true.fa  contigs.b33d0507edf83b76407cab380540482f.k_15.l_true.fa  contigs.b33d0507edf83b76407cab380540482f.k_17.l_true.fa  contigs.dcd72797443287d908e59f0514b4a004.k_11.l_true.fa  contigs.dcd72797443287d908e59f0514b4a004.k_13.l_true.fa  contigs.dcd72797443287d908e59f0514b4a004.k_15.l_true.fa  contigs.dcd72797443287d908e59f0514b4a004.k_17.l_true.fa  contigs.e8563b642804393c43510e3ce6dbd3d5.k_11.l_true.fa  contigs.e8563b642804393c43510e3ce6dbd3d5.k_13.l_true.fa  contigs.e8563b642804393c43510e3ce6dbd3d5.k_15.l_true.fa  contigs.e8563b642804393c43510e3ce6dbd3d5.k_17.l_true.fa  contigs.fb433fb388366cd9c10bf19dec2c5004.k_11.l_true.fa  contigs.fb433fb388366cd9c10bf19dec2c5004.k_13.l_true.fa  (+52 more)
trim/: fn.start.html  index.html
wdl/: AlignPacbioBam.wdl  BuildLocityperDB.wdl  HLAassociation.wdl  HidiveCluster.wdl  HidiveCohort.wdl  HidiveCorrect.wdl  HidiveMSA.wdl  HidiveRepeats.wdl  HidiveRescue.wdl  HidiveSample.wdl  HidiveSummarize.wdl  HidiveSummarizeMSA.wdl  HidiveTrain.wdl  RescueAndLocityper.wdl  SubsetAndAlignBam.wdl  ValidateInPanelSamples.wdl  ValidateVariants.wdl
(+195 files in other folders)
