[workspace]
members = [
    "src/hidive",
    "src/skydive",
    "src/pydive",
]

[workspace.package]
version = "0.1.107"
edition = "2021"
resolver = "2"

# Shared dependencies with fixed versions
[workspace.dependencies]
chrono = "0.4.38"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rust-htslib = { version = "0.47.0", features = ["gcs"] }
ndarray = "0.15.6"
rayon = "1.10.0"
regex = "1.10.5"
serde_json = "1.0.120"
url = "2.5.2"
