[package]
name = "hidive"
version = "0.1.60"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
#arrow2 = "*"
base64 = "0.22.1"
bio = "2.0.1"
chrono = "0.4.38"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "*"
eyre = "0.6.8"
flate2 = "1.0.30"
gbdt = "0.1.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
minimap2 = { version = "0.1.20+minimap2.2.28", features = ["simde"] }
needletail = "0.5.1"
noodles = "0.78.0"
num-format = "0.4.4"
path-absolutize = "3.1.1"
parquet = "*"
petgraph = "*"
#poasta = { path = "/Users/kiran/repositories/poasta" }
#polars = "*"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.5"
rust-htslib = { version = "0.47.0", features = ["gcs", "serde_feature"] }
serde = "1.0.204"
serde_json = "1.0.120"
skydive = { path = "../skydive" }
tempfile = "3.6.1"
url = "2.5.2"
#xgboost = "0.1.4"
ndarray = "0.15"
linfa = "0.5"
rust-spoa = "0.2.4"
rust-wfa2 = {git = "https://github.com/pairwise-alignment/rust-wfa2.git"}

grb = "2.0.1"

