[package]
name = "hidive"
version = "0.1.67"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
#arrow2 = "*"
base64 = "0.22.1"
bio = "2.0.1"
chrono = "0.4.38"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "*"
eyre = "0.6.8"
flate2 = "1.0.30"
gbdt = "0.1.3"
#good_lp = { version = "1.8.1", features = ["scip"], default-features = false }
gaoya = "0.2.0"
grb = "2.0.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
linfa = "0.5"
minimap2 = { version = "0.1.20+minimap2.2.28", features = ["simde"] }
needletail = "0.5.1"
noodles = "0.78.0"
ndarray = "0.15"
num-format = "0.4.4"
path-absolutize = "3.1.1"
parquet = "*"
petgraph = "*"
#poasta = { path = "/Users/kiran/repositories/poasta" }
#polars = "*"
rand = "0.8.5"
rayon = "1.10.0"
#recgraph = { git = "https://github.com/AlgoLab/RecGraph" }
regex = "1.10.5"
#russcip = "0.3.4"
rust-htslib = { version = "0.47.0", features = ["gcs", "serde_feature"] }
rust-wfa2 = {git = "https://github.com/pairwise-alignment/rust-wfa2.git"}
serde = "1.0.204"
serde_json = "1.0.120"
spoa = {git = "https://github.com/nlhepler/spoa-rs.git"}
skydive = { path = "../skydive" }
tempfile = "3.6.1"
url = "2.5.2"
#xgboost = "0.1.4"
cmake = "0.1"