[package]
name = "hidive"
version = "0.1.107"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "2.0.1"
chrono = "0.4.38"
clap = { version = "4.5.1", features = ["derive"] }
flate2 = "1.0.30"
gbdt = "0.1.3"
gaoya = "0.2.0"
hdbscan = "0.9.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
linked-hash-map = "0.5.6"
minimap2 = "0.1.21"
needletail = "0.5.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-stats = "0.6.0"
num-format = "0.4.4"
path-absolutize = "3.1.1"
petgraph = "0.6.5"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.5"
# reqwest = { workspace = true }
reqwest = { version = "=0.11.27", features = ["blocking"]}
rust-htslib = { version = "0.47.0", features = ["gcs", "serde_feature"] }
sdust = "=0.1.0"
serde = "1.0.204"
serde_json = "1.0.120"
spoa = { git = "https://github.com/nlhepler/spoa-rs.git", rev = "d546870f172e8dace40cbcc41a7fe32a97afe138" }
skydive = { path = "../skydive" }
tempfile = "3.6.1"
url = "2.5.2"
plotters = "0.3.7"

[profile.release]
opt-level = 2
codegen-units = 16