[package]
name = "pydive"
version = "0.1.47"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pydive"
crate-type = ["cdylib"]

[dependencies]
skydive = { path = "../skydive" }
pyo3 = { version = "0.16.5", features = ["extension-module"] }
