[package]
name = "pydive"
version = "0.1.92"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pydive"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
skydive = { path = "../skydive" }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
