[package]
name = "pydive"
version = { workspace = true }
edition = { workspace = true }
resolver = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pydive"
crate-type = ["cdylib"]

[dependencies]
chrono = { workspace = true }
skydive = { path = "../skydive" }
pyo3 = { workspace = true }
