[package]
name = "skydive"
version = "0.1.25"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backoff = "0.4.0"
bio = "*"
bio-types = "1.0.1"
bitflags = "*"
chrono = "*"
cloud-storage = { version = "*", features = ["sync"] }
color-eyre = {version = "*"}
crossbeam-utils = "0.8.19"
fs_extra = "1.2"
gag = "*"
glob = "0.3"
google-cloud-storage = "*"
humansize = "*"
indextree = "*"
indicatif = { version = "*", features = ["rayon"] }
iset = "0.2.2"
linear-map = "1.2.0"
memoffset = "0.9.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
needletail = "*"
openssl = { version = "0.10", features = ["vendored"] }
path-absolutize = "3.1.1"
parquet = "*"
petgraph = "*"
#polars = { version = "*", features = ["parquet", "lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "list", "list_eval", "rank", "lazy_regex"]}
pyo3 = { version = "*", features = ["abi3-py37", "extension-module"] }
pyo3-asyncio = { version = "*", features = ["attributes", "async-std-runtime", "tokio-runtime"] }
rand = {version = "*"}
rand_chacha = "*"
rayon = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking"]}
rust-htslib = { version = "*", features = ["curl", "gcs"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
sprs = "0.11.1"
sys-info = "0.9.1"
tokio = "*"
unzip-n = "*"
url = "*"

[dev-dependencies]
pretty_assertions = "1"
proptest = "*"

[profile.release]
debug = true