[package]
name = "skydive"
version = "0.1.121"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0"
backoff = "=0.4.0"
bio = "=2.0.1"
bitflags = "=1.3.2"
chrono = "=0.4.38"
cloud-storage = { version = "=0.11.1", features = ["sync"] }
flate2 = "=1.0.30"
gbdt = "=0.1.3"
google-cloud-storage = "=0.20.0"
indicatif = { version = "=0.17.8", features = ["rayon"] }
itertools = "=0.13.0"
linked_hash_set = "=0.1.5"
linked-hash-map = "=0.5.6"
ndarray = { version = "=0.16.1", features = ["rayon"] }
needletail = "=0.5.1"
openssl = { version = "=0.10", features = ["vendored"] }
path-absolutize = "=3.1.1"
pathfinding = "=4.11.0"
parquet = "=52.1.0"
petgraph = "=0.6.5"
pyo3 = { version = "=0.20.0", features = ["abi3-py37", "extension-module"] }
rand = "=0.8.5"
rand_chacha = "=0.3.1"
rayon = "=1.10.0"
regex = "=1.10.5"
reqwest = { version = "=0.11.27", features = ["blocking"]}
# reqwest = { workspace = true }
rust-htslib = { version = "=0.47.0", features = ["curl", "gcs"] }
sdust = "=0.1.0"
serde_json = "=1.0.120"
spoa = { git = "https://github.com/nlhepler/spoa-rs.git", rev = "d546870f172e8dace40cbcc41a7fe32a97afe138" }
url = "=2.5.2"

[dev-dependencies]
# pretty_assertions = "=1"
proptest = "=1.5.0"
md5 = "=0.7.0"

[lints.rust]
unsafe_code = "forbid"

# come at me, clippy
[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
# nursery = { level = "deny", priority = -1 }
# unwrap_used = "deny"

[profile.release]
opt-level = 2
codegen-units = 16